hxb-next-webui/docker/k8s/ingress/hxb-next-webui-ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: webui
  namespace: default
spec:
  rules:
  - host: webui.hexabase.com
    http:
      paths:
      - backend:
          service:
            name: beee-hxb-next-webui
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - webui.hexabase.com
    secretName: hexabase-ssl
