hxb-next-webui/docker/k8s/ingress/hxb-next-webui-ingress-stg.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: dev-next-webui
  namespace: default
spec:
  rules:
  - host: dev-next-webui.hexabase.com
    http:
      paths:
      - backend:
          service:
            name: beee-hxb-next-webui
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dev-next-webui.hexabase.com
    secretName: hexabase-ssl
